--- a/00-exercises/index.html
+++ b/00-exercises/index.html
@@ -7,9 +7,9 @@
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <script type="text/javascript" src="main.js"></script>
+  <!-- <script src="01-primes-until-n.js"></script> -->
+  <!-- <script src="02-alternative-series-equal-100.js"></script> -->
 </body>
 
 </html>
